--- a/Sparkt.WebApp/Views/work/HSPubh.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPubh.cshtml
@@ -12,11 +12,13 @@
     <div class="section">
         <div class="work-banner">
             <div class="banner-source">
-                <div class="banner-video  middle-align" style="background-image: url(../Content/work/images/banners/hsubh-cover.jpg);">
+                <div class="banner-video">
+                    <video class="bannerplayer" poster="~/Content/work/images/banners/hsubh-cover.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                        <source type="video/youtube" src="https://youtu.be/OHJxytyWtn8" />
+                    </video>
                 </div>
-
+                <div class="banner-image" style="background-image: url(../Content/work/images/banners/hsubh-cover.jpg);"> </div>
             </div>
-
 
 
             <div class="head-title floated">
