--- a/Sparkt.WebApp/Views/work/Total.cshtml
+++ b/Sparkt.WebApp/Views/work/Total.cshtml
@@ -1,10 +1,14 @@
 ﻿
 @{
-    ViewBag.Title = "Total";
+    ViewBag.Title = "Sparkt | Total";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Total";
+    ViewBag.MetaDescription = "Creating a truly holistic road safety solution to communicate a seamless brand story through product innovation";
+    ViewBag.MetaURL = "https://sparkt.in/work/total";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/total-thum.jpg";
 
 }
-
+   
 <main>
     <div class="section">
         <div class="work-banner">
@@ -23,50 +27,46 @@
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>Total</h1>
                 <div class="clear"></div>
-                <span>CREATING A TRULY HOLISTIC ROAD SAFETY SOLUTION TO COMMUNICATE A SEAMLESS BRAND STORY THROUGH PRODUCT INNOVATION</span>
+                <span>Creating a truly holistic road safety solution to communicate a seamless brand story through product innovation</span>
             </div>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
-    <div class="section">
-        <div class="head-title floated ">
-            <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
-            <h2>Creative Experience</h2>
+    <!--  <div class="section">
+        <div class="head-title floated "> <i class="title-icon"><img src="images/title-icon.png" alt=""/></i>
+          <h2>Creative Experience</h2>
         </div>
         <div class="creative-assets-wrapp">
-            <div class="assets-carousel total-bg ">
-                <div class="slider">
-                    <div>
-                        <div class="creative-assets">
-                            <div class="container">
-                                <div class="assets-title">
-                                    <h3>Skip ads with kullfi charming viewers <br>to watch her musical story</h3>
-                                </div>
-                                <div class="total-bk">
-                                    <img src="~/Content/work/images/total-insight.jpg" alt="total-insight">
-                                </div>
-                            </div>
-                        </div>
+          <div class="assets-carousel total-bg  piramal-bg" >
+            <div class="slider">
+              <div>
+                <div class="creative-assets" >
+                  <div class="container">
+                    <div class="assets-title">
+                      <h3>Skip ads with kullfi charming viewers <br>to watch her musical story</h3>
                     </div>
-
+                    <div class="total-bk" >
+                      <img src="images/total-insight.jpg" alt="total-insight" >
+                      </div>
+                  </div>
                 </div>
+              </div>
+
             </div>
+          </div>
         </div>
-    </div>
-    <div class="section white-bg">
-        <div class="head-title floated text-color-dark">
-            <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
-            <h2>Results</h2>
+      </div>
+      <div class="section white-bg">
+        <div class="head-title floated text-color-dark"> <i class="title-icon"><img src="images/title-icon.png" alt=""/></i>
+          <h2>Results</h2>
         </div>
 
         <div class="container">
-            <div class="quotes-wrapp">
-                <div class="quotes">
-                    <h3>Coming Soon</h3>
-                    <span class="quotes-writer"></span>
-                </div>
-            </div>
+          <div class="quotes-wrapp">
+            <div class="quotes">
+              <h3>Coming Soon</h3>
+              <span class="quotes-writer"></span> </div>
+          </div>
         </div>
-    </div>
+      </div>-->
 </main>
-
