--- a/Sparkt.WebApp/Views/work/HSPUBHMedia.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPUBHMedia.cshtml
@@ -12,13 +12,13 @@
     <div class="section">
         <div class="work-banner">
             <div class="banner-source">
-                <div class="banner-video  middle-align" style="background-image: url(../Content/work/images/banners/hsubh-cover.jpg);">
+                <div class="banner-video">
+                    <video class="bannerplayer" poster="~/Content/work/images/banners/hsubh-cover.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                        <source type="video/youtube" src="https://youtu.be/GaxWNAsziy0" />
+                    </video>
                 </div>
-
+                <div class="banner-image" style="background-image: url(../Content/work/images/banners/hsubh-cover.jpg);"> </div>
             </div>
-
-
-
             <div class="head-title floated">
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>Har Shaakh Pe <br>Ullu Baithaa Hai</h1>
