--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -933,7 +933,7 @@
                                             <p>Kya Ullu Banaya!</p>
                                         </div>
                                     </a>
-                                </li>                              
+                                </li>
                                 <li>
                                     <a href="@Url.Action("UCypherUseOfData","work")">
                                         <img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="">
@@ -942,7 +942,7 @@
                                             <p>Naya Sport. Naye Superstars.</p>
                                         </div>
                                     </a>
-                                </li>                               
+                                </li>
                                 <li>
                                     <a href="@Url.Action("Ikyawann","work")">
                                         <img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="">
@@ -1061,6 +1061,15 @@
                                         <div class="caption">
                                             <h4>U Sports Hamburger</h4>
                                             <p>Bring alive the Hamburger menu!</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("Total","work")">
+                                        <img src="~/Content/work/images/thums/total-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Total</h4>
+                                                <p>Creating a truly holistic road safety solution to communicate a seamless brand story through product innovation</p>
                                         </div>
                                     </a>
                                 </li>
@@ -1237,6 +1246,15 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="@Url.Action("EditageInsights","work")">
+                                        <img src="~/Content/work/images/thums/editage-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Editage Insights</h4>
+                                            <p>Packaged the content in an effective manner to alleviate the brand’s perception</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="@Url.Action("MadeByMom","work")">
                                         <img src="~/Content/work/images/thums/mouthers-day-thum.jpg" alt="">
                                         <div class="caption">
@@ -1316,7 +1334,7 @@
                                             <p>Bringing alive the characters of the three brothers and their special bond with exclusive digital content</p>
                                         </div>
                                     </a>
-                                </li>                               
+                                </li>
                             </ul>
                         </div>
                         <div class="resp-tab-content" id="Marketing-Sciences">
