--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -246,8 +246,8 @@
     <!--<script type="text/javascript" src="plugins/scrollmagic/js/plugins/debug.addIndicators.min.js" ></script>-->
     <script type="text/javascript" src="~/Content/work/js/functions.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            $('.se-pre-con').delay(1700).fadeOut('slow');
+        jQuery(window).load(function () {
+            $('.se-pre-con').fadeOut('slow');
         });
     </script>
 </body>
