--- a/Sparkt.WebApp/Views/work/EditageInsights.cshtml
+++ b/Sparkt.WebApp/Views/work/EditageInsights.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Sparkt | Editage Insigts";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Editage Insigts";
-    ViewBag.MetaDescription = "Packaged the content in an effective manner to alleviate <br>the brand’s perception";
+    ViewBag.MetaDescription = "Packaged the content in an effective manner to alleviate the brand’s perception";
     ViewBag.MetaURL = "https://sparkt.in/work/editinsights";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/editage-thum.jpg";
 }
@@ -88,7 +88,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>Created a strong visual identity to target <br>the right audience </h3>
+                                    <h3>Packaged the content in an effective manner to </br> alleviate the brand’s perception</h3>
                                 </div>
                                 <div class="sparkt-carousel square-wrapp">
                                     <div class="mobile-wrapp square">
