--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -28,8 +28,8 @@
             <li class="fadeRight t-animated" data-t-show="14"><a href="@Url.Action("Ikyawann","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="" /> <span>Ikyawann</span> </a> </li>
             <!--  <li class="fadeRight t-animated" data-t-show="10"><a href="ted.php" class="hvr-grow-shadow"><img src="images/thums/ted-thum.jpg" alt=""/> <span>Ted Talks</span> </a> </li>
 
-              <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
-              <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
+            <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
         </ul>
         <ul id="star" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Swp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
@@ -50,15 +50,18 @@
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("UCypherUseOfData","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="" /> <span>USports Use of Data</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("USportsHamburger","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-hamburger-thum.jpg" alt="" /> <span>USports Hamburge</span> </a> </li>
         </ul>
+        <ul id="editage" class="horizontalScroll">
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("EditageInsights","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/editage-thum.jpg" alt="" /> <span>Editage Insights</span> </a> </li>
+        </ul>
         @*<ul id="boutique" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
-        </ul>*@        
+                <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
+            </ul>*@
         @*<ul id="mgage" class="horizontalScroll">
-           <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
-         </ul>
-        <ul id="times-network" class="horizontalScroll">
-          <li class="fadeRight t-animated" data-t-show="1"><a href="#" class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
-        </ul>*@
+               <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
+             </ul>
+            <ul id="times-network" class="horizontalScroll">
+              <li class="fadeRight t-animated" data-t-show="1"><a href="#" class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
+            </ul>*@
     </div>
     <div class="clear"></div>
     <ul class="work-with-clients horizontalScroll">
@@ -68,8 +71,7 @@
         <li class="one-plus"><a href="#" data-related="oneplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/oneplus.png" alt="" /></a> </li>
         <li class="piramal"><a href="#" data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
         <li class="usports"><a href="#" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
-        @*<li class="bql"><a href="#" data-related="editage" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/editage.png" alt="" /></a> </li>*@      
-        
-        
+        <li class="editage"><a href="#" data-related="editage" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/editage.png" alt="" /></a> </li>
+
     </ul>
 </div>
