--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -37,15 +37,15 @@
     <meta name="twitter:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India">
     <meta name="twitter:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
     <meta name="twitter:creator" content="@Html.Raw("@")Sparkt">
-    <meta name="twitter:image" content="http://sparkt.in/Content/images/spakt.png" />
+    <meta name="twitter:image" content="https://sparkt.in/Content/images/spakt.png" />
     <!-- Open Graph data -->
     <meta property="og:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India" />
-    <meta property="og:url" content="http://www.sparkt.in" />
+    <meta property="og:url" content="https://www.sparkt.in" />
     <meta property="og:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers." />
     <meta property="og:site_name" content="@Html.Raw("@")Sparkt" />
     <meta property="og:type" content="website" />
     <meta property="fb:admins" content="306588899709911" />
-    <meta property="og:image" content="http://sparkt.in/Content/images/spakt.png" />
+    <meta property="og:image" content="https://sparkt.in/Content/images/spakt.png" />
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India">
     <meta itemprop="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
@@ -67,7 +67,7 @@
     <script src="~/Scripts/User/GoogleCaptcha.js"></script>
     <script type="application/ld+json">
         {
-        "@@context": "http://schema.org",
+        "@@context": "https://schema.org",
         "@@type": "Organization",
         "url": "https://www.sparkt.in",
         "logo": "https://www.sparkt.in/Content/images/sparkt.png"
@@ -75,7 +75,7 @@
     </script>
     <script type="application/ld+json">
         {
-        "@@context": "http://schema.org",
+        "@@context": "https://schema.org",
         "@@type": "Organization",
         "url": "https://www.sparkt.in",
         "name": "Sparkt",
@@ -89,7 +89,7 @@
     </script>
     <script type="application/ld+json">
         {
-        "@@context":"http://schema.org",
+        "@@context":"https://schema.org",
         "@@type":"ItemList",
         "itemListElement":
         [
@@ -131,7 +131,7 @@
     </script>
     <script type="application/ld+json">
         {
-        "@@context": "http://schema.org",
+        "@@context": "https://schema.org",
         "@@type": "PostalAddress",
         "streetAddress": "408, Satellite Gazebo, Andheri-Ghatkopar Link Road, Chakala, Andheri (East), Mumbai, Maharashtra 400093",
         "addressLocality": "Andheri",
@@ -141,7 +141,7 @@
     </script>
     <script type="application/ld+json">
         {
-        "@@context": "http://schema.org",
+        "@@context": "https://schema.org",
         "@@type": "VideoObject",
         "name": "Sparkt Office Video",
         "@@id": "https://www.sparkt.in/Content/media/sparkt-office.mp4",
@@ -330,7 +330,7 @@
             <div class="social-links">
                 <ul>
                     <li><a href="https://www.facebook.com/sparktindia" target="_blank" class="hvr-rectangle-out facebook"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="http://www.twitter.com/sparktindia" target="_blank" class="hvr-rectangle-out twitter"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://www.twitter.com/sparktindia" target="_blank" class="hvr-rectangle-out twitter"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="https://www.youtube.com/c/SparktIndia" target="_blank" class="hvr-rectangle-out youtube"><i class="fab fa-youtube"></i></a></li>
                     <li><a href="https://plus.google.com/+SparktIn" target="_blank" class="hvr-rectangle-out google"><i class="fab fa-google-plus"></i></a></li>
                 </ul>
