--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -40,7 +40,7 @@
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/style.css" />
     <script type="application/ld+json">
         {
-        "@@context": "http://schema.org",
+        "@@context": "https://schema.org",
         "@@type": "Organization",
         "url": "https://www.sparkt.in",
         "logo": "https://www.sparkt.in/Content/images/sparkt.png"
@@ -48,7 +48,7 @@
     </script>
     <script type="application/ld+json">
         {
-        "@@context": "http://schema.org",
+        "@@context": "https://schema.org",
         "@@type": "Organization",
         "url": "https://www.sparkt.in",
         "name": "Sparkt",
@@ -62,7 +62,7 @@
     </script>
     <script type="application/ld+json">
         {
-        "@@context": "http://schema.org",
+        "@@context": "https://schema.org",
         "@@type": "PostalAddress",
         "streetAddress": "408, Satellite Gazebo, Andheri-Ghatkopar Link Road, Chakala, Andheri (East), Mumbai, Maharashtra 400093",
         "addressLocality": "Andheri",
@@ -175,7 +175,7 @@
             <div class="social-links">
                 <ul>
                     <li><a href="https://www.facebook.com/sparktindia" target="_blank" class="hvr-rectangle-out facebook"><i class="fa fa-facebook-f"></i></a></li>
-                    <li><a href="http://www.twitter.com/sparktindia" target="_blank" class="hvr-rectangle-out twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.twitter.com/sparktindia" target="_blank" class="hvr-rectangle-out twitter"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.youtube.com/c/SparktIndia" target="_blank" class="hvr-rectangle-out youtube"><i class="fa fa-youtube"></i></a></li>
                     <li><a href="https://plus.google.com/+SparktIn" target="_blank" class="hvr-rectangle-out google"><i class="fa fa-google-plus"></i></a></li>
                 </ul>
